experimental/parser/testdata/parser/import/modifiers.proto.stderr.txt
error: unexpected `weak` modifier in import
  --> testdata/parser/import/modifiers.proto:5:15
   |
 5 | import public weak "foo.proto";
   | ------------- ^^^^
   |  |
   |  already modified here

error: unexpected `option` modifier in import
  --> testdata/parser/import/modifiers.proto:6:15
   |
 6 | import public option "foo.proto";
   | ------------- ^^^^^^
   |  |
   |  already modified here

warning: `import weak` is deprecated in "proto2"
  --> testdata/parser/import/modifiers.proto:7:8
   |
 1 | syntax = "proto2";
   |          -------- syntax specified here
...
 6 | import public option "foo.proto";
 7 | import weak option "foo.proto";
   |        ^^^^
   = help: deprecated since "proto2", to be removed in Edition 2024
   = help: `import weak` is not implemented correctly in most Protobuf
           implementations

error: unexpected `option` modifier in import
  --> testdata/parser/import/modifiers.proto:7:13
   |
 7 | import weak option "foo.proto";
   | ----------- ^^^^^^
   |  |
   |  already modified here

error: `import option` is not supported in "proto2"
  --> testdata/parser/import/modifiers.proto:8:8
   |
 1 | syntax = "proto2";
   |          -------- syntax specified here
...
 7 | import weak option "foo.proto";
 8 | import option weak public "foo.proto";
   |        ^^^^^^
   = help: `import option` requires at least Edition 2024

error: unexpected `weak` modifier in import
  --> testdata/parser/import/modifiers.proto:8:15
   |
 8 | import option weak public "foo.proto";
   | ------------- ^^^^
   |  |
   |  already modified here

error: unexpected `public` modifier in import
  --> testdata/parser/import/modifiers.proto:8:20
   |
 8 | import option weak public "foo.proto";
   | -------------      ^^^^^^
   |  |
   |  already modified here

error: import after `import option`
  --> testdata/parser/import/modifiers.proto:9:1
   |
 8 | import option weak public "foo.proto";
   | -------------------------------------- previous `import option` here
 9 | import weak weak "foo.proto";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `import option`s must be the last imports in a file

warning: `import weak` is deprecated in "proto2"
  --> testdata/parser/import/modifiers.proto:9:8
   |
 1 | syntax = "proto2";
   |          -------- syntax specified here
...
 8 | import option weak public "foo.proto";
 9 | import weak weak "foo.proto";
   |        ^^^^
   = help: deprecated since "proto2", to be removed in Edition 2024
   = help: `import weak` is not implemented correctly in most Protobuf
           implementations

error: unexpected `weak` modifier in import
  --> testdata/parser/import/modifiers.proto:9:13
   |
 9 | import weak weak "foo.proto";
   | ----------- ^^^^
   |  |
   |  already modified here

error: import after `import option`
  --> testdata/parser/import/modifiers.proto:10:1
   |
 8 | import option weak public "foo.proto";
   | -------------------------------------- previous `import option` here
 9 | import weak weak "foo.proto";
10 | import export "foo.proto";
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `import option`s must be the last imports in a file

error: unexpected `export` modifier in import
  --> testdata/parser/import/modifiers.proto:10:8
   |
10 | import export "foo.proto";
   |        ^^^^^^
  help: replace with `public`
   |
10 | - import export "foo.proto";
10 | + import public "foo.proto";
   |
   = help: `export` only applies to a type definition

encountered 10 errors and 2 warnings
